# PixelSmith

./: .gitignore  CMakeLists.txt  main.cpp
customLib/cameraLib/: CMakeLists.txt
customLib/cameraLib/include/: camera.h
customLib/cameraLib/src/: camera.cpp
customLib/shaderLib/: CMakeLists.txt
customLib/shaderLib/include/: Shader.hpp
customLib/shaderLib/src/: shader.cpp
run/: build.bat  configure.bat  run.bat
shaders/example1/: test_FS.glsl  test_VS.glsl
shaders/example10/: Texture_FS.glsl  Texture_VS.glsl
shaders/example2/: offset_FS.glsl  offset_VS.glsl
shaders/example3/: VP_FS.glsl  VP_VS.glsl
shaders/example4/: Texture_FS.glsl
shaders/example5/: Texture_FS.glsl
shaders/example6/: Texture_FS.glsl  Texture_VS.glsl
shaders/example9/: Texture_VS.glsl
